kustomizations/api-gateway/fallback-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: fallback-gateway
  namespace: journal
spec:
  type: ExternalName
  externalName: continuumtest--gateway.elife.internal
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: fallback-gateway
  namespace: journal
  labels:
    kubernetes.io/service-name: fallback-gateway
addressType: FQDN
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - continuumtest--gateway.elife.internal
