kustomizations/api-gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-web
  namespace: journal
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: ${fallback_gateway_host}
    nginx.ingress.kubernetes.io/backend-protocol: ${fallback_gateway_protocol:-"HTTP"}
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fallback-gateway
            port:
              number: ${fallback_gateway_port}
  tls:
  - hosts:
    - ${hostname}
    secretName: api-gateway-web-tls
